--- a/_config.yml
+++ b/_config.yml
@@ -6,19 +6,19 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: ACMI Audio Guide
+title: MAC Panamá - Voces en Off
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  A web-based audio guide theme for Jekyll.
+  Mujeres en la colleción permanente del MAC.
 baseurl: "" # the subpath of your site, e.g. /blog
 audio_path: "/audio/"
 episode_hero_path: "/assets/img/stops/"
-url: "http://www.example.com" # the base hostname & protocol for your site
+url: "https://github.com/macpanama" # the base hostname & protocol for your site
 logo: "/assets/img/logo/audio-guide.png"
-twitter_username: acmilabs
-github_username:  acmilabs
-menu_heading: "Select another stop"
-index_page_text: "Select an audio guide stop to begin."
+twitter_username: Panama_MAC
+github_username:  macpanama
+menu_heading: "Seleccione otra voz. Choose another voice."
+index_page_text: "Seleccione una voz. Choose a voice."
 headphones_icon_color: "/assets/img/icons/headphones-dark.png"
 headphones_icon_light: "/assets/img/icons/headphones-light.png"
 
